changed way, how view gets data

--- a/client/views/app/menu-items/menu-list-rank-report/menu-item/menu-item.html
+++ b/client/views/app/menu-items/menu-list-rank-report/menu-item/menu-item.html
@@ -1,17 +1,9 @@
 <template name="menuItemReport">
-  <td>
-    {{item.name}}
-  </td>
-  <td><span class="sparkline"></span></td>
-  <td>{{item.rank}}</td>
-  <td>{{itemSalesQuantity}}</td>
-  <td>${{item.salesPrice}}</td>
-  <td>${{itemTotalPriceFromSales}}</td>
-  <td>{{menuItemStats.totalPrepCost}}</td>
-  <td></td>
-  <td>{{menuItemStats.totalIngCost}}</td>
-  <td></td>
-  <td>{{menuItemStats.tax}}</td>
-  <td>{{menuItemStats.contribution}}</td>
-  <td>{{menuItemStats.totalContribution}}</td>
+  {{#each itemData}}
+    {{#if equal this 'sparkline'}}
+      <td><span class="sparkline"></span></td>
+    {{else}}
+      <td>{{this}}</td>
+    {{/if}}
+  {{/each}}
 </template>
