Small reorder of top menu, minor change to tasks.

--- a/client/views/app/tasks/task-list/task-list-header/task-list-header.html
+++ b/client/views/app/tasks/task-list/task-list-header/task-list-header.html
@@ -2,7 +2,7 @@
   <div class="title-action">
     <button class="btn btn-primary create-new-task">
       <i class="fa fa-plus"></i>
-      Create new task
+      Task
     </button>
   </div>
 </template>
