--- a/client/views/app/tasks/task-list/task-list.html
+++ b/client/views/app/tasks/task-list/task-list.html
@@ -1,5 +1,5 @@
 <template name="taskList">
-  {{> pageHeading title='Task List' name='taskList' onCreateTaskAction=onCreateTaskAction}}
+  {{> pageHeading title='Tasks' name='taskList' onCreateTaskAction=onCreateTaskAction}}
 
   <div class="task-list-content">
     {{#if isNewTaskCreating}}
