--- a/client/stylesheets/globals/elements.import.less
+++ b/client/stylesheets/globals/elements.import.less
@@ -635,33 +635,10 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
   text-transform: uppercase;
 }
 
-/* PEACE */
+/* NPROGRESS */
 
-.pace {
-  -webkit-pointer-events: none;
-  pointer-events: none;
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
-
-.pace-inactive {
-  display: none;
-}
-
-.pace .pace-progress {
+#nprogress .bar {
   background: @navy;
-  position: fixed;
-  z-index: 2000;
-  top: 0;
-  right: 100%;
-  width: 100%;
-  height: 2px;
-}
-
-.pace-inactive {
-  display: none;
 }
 
 /* WIDGETS */
