Add close all flyouts button to all flyouts
Also extracted button's repetitive code to separate template

--- a/client/views/app/notifications/notifications.html
+++ b/client/views/app/notifications/notifications.html
@@ -1,9 +1,8 @@
 <template name="notifiFlyout">
   <div class="flyout-header">
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
+    {{> CloseFlyoutButton}}
     Notifications
+    {{> CloseAllFlyoutsButton}}
   </div>
 
   <div class="flyout-content">
