--- a/client/views/app/organizations/location-settings/location-settings.html
+++ b/client/views/app/organizations/location-settings/location-settings.html
@@ -1,9 +1,8 @@
 <template name="locationSettings">
   <div class="flyout-header">
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
+    {{> CloseFlyoutButton}}
     {{location.name}} location settings
+    {{> CloseAllFlyoutsButton}}
   </div>
 
   <div class="flyout-content">
