--- a/client/views/app/organizations/organization-flyout-header/create-location/create-location.html
+++ b/client/views/app/organizations/organization-flyout-header/create-location/create-location.html
@@ -1,9 +1,8 @@
 <template name="createLocation">
   <div class="flyout-header">
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
+    {{> CloseFlyoutButton}}
     Add Location
+    {{> CloseAllFlyoutsButton}}
   </div>
 
   <div class="flyout-content">
