--- a/client/views/app/organizations/organization-flyout-header/invitations-list/invitations-list.html
+++ b/client/views/app/organizations/organization-flyout-header/invitations-list/invitations-list.html
@@ -1,9 +1,8 @@
 <template name="invitationsList">
   <div class="flyout-header">
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
+    {{> CloseFlyoutButton}}
     Invitations List
+    {{> CloseAllFlyoutsButton}}
   </div>
 
   <div class="flyout-content">
