--- a/client/views/app/organizations/organization-flyout-header/organization-settings/change-billing-account/change-billing-account.html
+++ b/client/views/app/organizations/organization-flyout-header/organization-settings/change-billing-account/change-billing-account.html
@@ -1,9 +1,8 @@
 <template name="changeBillingAccount">
   <div class="flyout-header">
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
+    {{> CloseFlyoutButton}}
     Change billing account
+    {{> CloseAllFlyoutsButton}}
   </div>
   <div class="flyout-content">
     <p>
