--- a/client/views/app/organizations/organization-flyout-header/organization-settings/organization-settings.html
+++ b/client/views/app/organizations/organization-flyout-header/organization-settings/organization-settings.html
@@ -1,9 +1,8 @@
 <template name="organizationDetailsPage">
   <div class="flyout-header">
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
+    {{> CloseFlyoutButton}}
     Organization details
+    {{> CloseAllFlyoutsButton}}
   </div>
   <div class="flyout-content">
     <div class="row">
