--- a/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-notes.html
+++ b/client/views/app/roster/weekly-shift-roster/weekly-roster-day/manager-notes/manager-notes.html
@@ -1,9 +1,8 @@
 <template name="managerNotes">
   <div class="flyout-header">
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
+    {{> CloseFlyoutButton}}
     Notes on {{dayFormat date}}
+    {{> CloseAllFlyoutsButton}}
   </div>
 
   <div class="flyout-content">
