--- a/client/views/app/organizations/organization-flyout-header/organization-flyout-header.html
+++ b/client/views/app/organizations/organization-flyout-header/organization-flyout-header.html
@@ -2,9 +2,7 @@
   <span>Organization</span>
 
   <div class="organization-buttons-container">
-    <span class="close-all-flyouts-button pull-right btn btn-sm btn-link organization-settings-buttons">
-      <i class="fa fa-times-circle-o"></i>
-    </span>
+    {{> CloseAllFlyoutsButton}}
 
     {{#if isOrganizationOwner}}
       <span class="pull-right btn btn-sm btn-link organization-details-flyout organization-settings-buttons"><i
