--- a/client/views/app/unavailabilities/user-unavailabilities/flyout-header/flyout-header.html
+++ b/client/views/app/unavailabilities/user-unavailabilities/flyout-header/flyout-header.html
@@ -1,8 +1,7 @@
 <template name="unavailabilitiesFlyoutHeader">
   <div class="flyout-header">
-    <button class="close-flyout-button">
-      <i class="fa fa-angle-right"></i>
-    </button>
+    {{> CloseFlyoutButton}}
     <span>{{title}}</span>
+    {{> CloseAllFlyoutsButton}}
   </div>
 </template>
