Remove spinner from page loading progress bar

--- a/client/stylesheets/globals/elements.import.less
+++ b/client/stylesheets/globals/elements.import.less
@@ -637,8 +637,14 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 
 /* NPROGRESS */
 
-#nprogress .bar {
-  background: @navy;
+#nprogress {
+  .bar {
+    background: @navy;
+  }
+
+  .spinner {
+    display: none;
+  }
 }
 
 /* WIDGETS */
