refactored menu list rank report code

--- a/client/views/app/menu-items/details/widgets/widgets.html
+++ b/client/views/app/menu-items/details/widgets/widgets.html
@@ -18,7 +18,7 @@
         <div class="col-xs-12 text-right">
           <span>Prep</span>
 
-          <h2 class="font-bold">$ {{menuItemStats.totalPrepCost}}</h2>
+          <h2 class="font-bold">$ {{menuItemStats.prepCost}}</h2>
         </div>
       </div>
     </div>
@@ -29,7 +29,7 @@
         <div class="col-xs-12 text-right">
           <span>Ingredient</span>
 
-          <h2 class="font-bold">$ {{menuItemStats.totalIngCost}}</h2>
+          <h2 class="font-bold">$ {{menuItemStats.ingCost}}</h2>
         </div>
       </div>
     </div>
