--- a/client/views/app/menu-items/menu-list-rank-report/menu-list-rank-report.html
+++ b/client/views/app/menu-items/menu-list-rank-report/menu-list-rank-report.html
@@ -2,29 +2,33 @@
   {{> pageHeading title="Menus List" category='Menus' name="menuList"}}
 
   <div class="wrapper wrapper-content animated">
-    {{#if customRangeSelected}}
-      {{> menuItemReportDatepicker}}
-    {{else}}
-      <select class="date">
+    <div class="row">
+      <div class="select-range-container col-md-10 col-lg-10">
+      <select class="date btn btn-white dropdown-toggle col-md-3 col-lg-3">
         <option value="yesterday">Yesterday</option>
-        <option value="this week">This Week</option>
-        <option value="last week">Last week</option>
-        <option value="custom range">Custom range</option>
+        <option value="this-week">This Week</option>
+        <option value="last-week">Last week</option>
+        <option value="custom-range">Custom range</option>
       </select>
-    {{/if}}
+      {{#if customRangeSelected}}
+        {{> menuItemReportDatepicker}}
+      {{/if}}
+      </div>
+    </div>
+    <hr>
     <div class="table-responsive">
       <table class="table">
         <thead>
           <tr>
             {{#each theadItems}}
-              <td>{{this}}</td>
+              <td>{{{this}}}</td>
             {{/each}}
           </tr>
         </thead>
         <tbody class="table-hover">
           {{#each menuItems}}
             <tr>
-              {{> menuItemReport this}}
+              {{> menuItemReport item=this itemsCount=../menuItemsCount}}
             </tr>
           {{/each}}
         </tbody>
