small fixes in task list

--- a/client/views/app/tasks/task-list/task-filters/task-user-filter/task-user-filter.html
+++ b/client/views/app/tasks/task-list/task-filters/task-user-filter/task-user-filter.html
@@ -1,7 +1,7 @@
 <template name="taskUserFilter">
   <select name="task-user-filter" class="task-user-filter">
     <option value=""></option>
-    <option value="{{currentUser._id}}">{{username currentUser._id}}</option>
+    <option value="{{currentUser._id}}" selected="selected">{{username currentUser._id}}</option>
 
     {{# each users}}
       <option value="{{_id}}">{{username _id}}</option>
