--- a/client/views/app/menu-items/menu-list-rank-report/menu-list-rank-report.html
+++ b/client/views/app/menu-items/menu-list-rank-report/menu-list-rank-report.html
@@ -1,18 +1,34 @@
 <template name="menuListRankReport">
-  {{> pageHeading title="Menus List" category='Menus' name="menuList"}}
+  {{> pageHeading title="Menu Items Report" category='Menus' name="menuList"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
-      <div class="select-range-container col-md-10 col-lg-10">
-      <select class="date btn btn-white dropdown-toggle col-md-3 col-lg-3">
-        <option value="yesterday">Yesterday</option>
-        <option value="this-week">This Week</option>
-        <option value="last-week">Last week</option>
-        <option value="custom-range">Custom range</option>
-      </select>
-      {{#if customRangeSelected}}
-        {{> menuItemReportDatepicker}}
-      {{/if}}
+      <div class="select-range-container col-md-12 col-lg-12">
+        <div class="col-md-3 col-lg-3">
+          <button data-toggle="dropdown"
+                  class="btn btn-white dropdown-toggle form-control text-capitalize text-align-left">
+            {{selectedCategory.name}}
+          </button>
+          <span class="caret caret-pulled-right pull-right"></span>
+          <ul class="dropdown-menu text-capitalize filter-menus">
+            {{#each categories}}
+              <li>
+                <a href="{{pathFor route='menuItemsRankReport' category=_id dateRange=../dateRange startDate=../startDate endDate=../endDate}}">
+                  {{name}}
+                </a>
+              </li>
+            {{/each}}
+          </ul>
+        </div>
+        <select class="date btn btn-white dropdown-toggle col-md-3 col-lg-3">
+          <option value="yesterday">Yesterday</option>
+          <option value="this-week">This Week</option>
+          <option value="last-week">Last Week</option>
+          <option value="custom-range">Custom Date Range</option>
+        </select>
+        {{#if customRangeSelected}}
+          {{> menuItemReportDatepicker}}
+        {{/if}}
       </div>
     </div>
     <hr>
