--- a/client/views/app/calendar/calendar.less
+++ b/client/views/app/calendar/calendar.less
@@ -1,4 +1,4 @@
-.fc{
+.fc {
   th.fc-day-header {
     cursor: pointer;
   }
@@ -14,6 +14,24 @@
       &:after {
         font-size: 100%;
         top: 4px;
+      }
+    }
+  }
+}
+
+.flyout-container {
+  .event-description-row {
+    margin-top: 10px;
+
+    .job-description {
+      border: 1px solid #E8E8E8;
+      padding: 15px 20px;
+      margin-top: 5px;
+    }
+
+    .job-checklist {
+      .checklist-item-done {
+        text-decoration: line-through;
       }
     }
   }
