--- a/client/views/app/common/flyouts/flyouts.less
+++ b/client/views/app/common/flyouts/flyouts.less
@@ -1,6 +1,6 @@
 @marginTop: 60px;
 .flyout-container {
-  .show-flyout, .hide-flyout {
+  .flyout {
     &:nth-child(2) {
       margin-top: @marginTop;
     }
@@ -13,6 +13,8 @@
     &:nth-child(5) {
       margin-top: @marginTop * 4;
     }
+
+    transition: margin-top .5s;
 
     .flyout-header {
       position: static !important;
