--- a/client/views/app/organizations/organization-structure.html
+++ b/client/views/app/organizations/organization-structure.html
@@ -1,6 +1,6 @@
 <template name="organizationStructure">
   <div class="flyout-header">
-    {{> CloseFlyoutButton}}
+    {{> closeAllFlyoutButton}}
     <div class="col-xs-11 col-xs-offset-1">
       {{>organizationButtons hasLocations=hasLocations
          organizationId=state$organization._id}}
