--- a/client/views/app/calendar/calendar-item/event-item-flyout/event-item-flyout-content/event-checklist/event-checklist.html
+++ b/client/views/app/calendar/calendar-item/event-item-flyout/event-item-flyout-content/event-checklist/event-checklist.html
@@ -1,4 +1,6 @@
 <template name="eventChecklist">
+  {{> eventChecklistProgress doneTasks=checkedItems.length allTasks=checklistItems.length}}
+
   {{#each checklistItems}}
     <p class="event-description-row">
       {{> eventChecklistItem title=this index=@index isChecked=isChecked}}
