--- a/client/views/app/calendar/calendar-item/event-item-flyout/event-item-flyout-content/event-recurring-job/event-recurring-job.html
+++ b/client/views/app/calendar/calendar-item/event-item-flyout/event-item-flyout-content/event-recurring-job/event-recurring-job.html
@@ -31,7 +31,7 @@
           </div>
 
           <div class="col-xs-12 job-checklist">
-            {{> eventChecklist checklistItems=job.checklist checkedItems=eventObject.item.doneCheckListItems onCheckToggle=onCheckToggle}}
+            {{> eventChecklist checklistItems=checklist checkedItems=checkedItems onCheckToggle=onCheckToggle}}
           </div>
         </div>
       {{/if}}
