--- a/client/views/app/menu-items/menu-list-rank-report/menu-item/menu-item.html
+++ b/client/views/app/menu-items/menu-list-rank-report/menu-item/menu-item.html
@@ -1,5 +1,5 @@
 <template name="menuItemReport">
-  {{#each itemData}}
+  {{#each item}}
     {{#if equal this 'sparkline'}}
       <td><span class="sparkline"></span></td>
     {{else}}
