--- a/client/views/app/menu-items/menu-list-rank-report/menu-list-rank-report.html
+++ b/client/views/app/menu-items/menu-list-rank-report/menu-list-rank-report.html
@@ -13,7 +13,7 @@
           <ul class="dropdown-menu text-capitalize filter-menus">
             {{#each categories}}
               <li>
-                <a href="{{pathFor route='menuItemsRankReport' category=_id dateRange=../dateRange startDate=../startDate endDate=../endDate}}">
+                <a href="{{pathFor route='menuItemsRankReport' category=_id rangeType=../rangeType startDate=../startDate endDate=../endDate}}">
                   {{name}}
                 </a>
               </li>
@@ -22,7 +22,7 @@
         </div>
         <select class="date btn btn-white dropdown-toggle col-md-3 col-lg-3">
           <option value="yesterday">Yesterday</option>
-          <option value="this-week">This Week</option>
+          <option value="current-week">Current Week</option>
           <option value="last-week">Last Week</option>
           <option value="custom-range">Custom Date Range</option>
         </select>
