--- a/client/views/app/common/ingredient-item-editor/ingredient-editor.html
+++ b/client/views/app/common/ingredient-item-editor/ingredient-editor.html
@@ -10,17 +10,17 @@
       Stocks
     </div>
   </div>
-  <div class="flyout-content">
+  <div class="flyout-content ingredient-editor">
     <form class="form-horizontal submit-ingredient-form">
       <div class="form-group">
-        <label class="col-sm-4 control-label">Supplier's Code</label>
+        <label class="col-sm-12 control-label">Supplier's Code</label>
 
         {{#if canEditStock}}
         {{else}}
           <div class="form-control">{{ingredient.code}}</div>
         {{/if}}
 
-        <div class="col-sm-6 ">
+        <div class="col-sm-12">
           {{#if canEditStock}}
             <input type="text" name="code" class="form-control" placeholder="Add Code"
                    value="{{ingredient.code}}">
@@ -31,9 +31,9 @@
       </div>
 
       <div class="form-group">
-        <label class="col-sm-4 control-label">Name</label>
+        <label class="col-sm-12 control-label">Name</label>
 
-        <div class="col-sm-6 ">
+        <div class="col-sm-12">
           {{#if canEditStock}}
             <input type="text" name="name" class="form-control" placeholder="Add Name"
                    value="{{ingredient.description}}">
@@ -44,9 +44,9 @@
       </div>
 
       <div class="form-group">
-        <label class="col-sm-4 control-label">Supplier</label>
+        <label class="col-sm-12 control-label">Supplier</label>
 
-        <div class="col-sm-6 ">
+        <div class="col-sm-12">
           {{#if canEditStock}}
             <select name="supplier" class="form-control">
               {{#each supplierOptions}}
@@ -66,13 +66,13 @@
       </div>
 
       <div class="form-group">
-        <label class="col-sm-4 control-label">
+        <label class="col-sm-12 control-label">
           Unit Ordered
           <i class="fa fa-question-circle pull-right unit-ordered-popover btn-link" data-toggle="popover"
              data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
         </label>
 
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           {{#if canEditStock}}
             <input type="text" name="unitOrdered" class="form-control" placeholder="Type a unit"
                    value="{{ingredient.portionOrdered}}"/>
@@ -83,9 +83,9 @@
       </div>
 
       <div class="form-group">
-        <label class="col-sm-4 control-label">How much does each {{unitsCaptions.ordered}} cost?</label>
+        <label class="col-sm-12 control-label">How much does each {{unitsCaptions.ordered}} cost?</label>
 
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           {{#if canEditStock}}
             <div class="input-group">
               <span class="input-group-addon">$</span>
@@ -100,13 +100,13 @@
       </div>
 
       <div class="form-group">
-        <label class="col-sm-4 control-label">
+        <label class="col-sm-12 control-label">
           Unit Used
           <i class="fa fa-question-circle pull-right btn-link unit-used-popover" data-toggle="popover"
              data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
         </label>
 
-        <div class="col-sm-6 ">
+        <div class="col-sm-12">
           {{#if canEditStock}}
             <input type="text" name="unitUsed" placeholder="Type a unit" class="form-control"
                    value="{{ingredient.portionUsed}}"/>
@@ -117,13 +117,13 @@
       </div>
 
       <div class="form-group">
-        <label class="col-sm-4 control-label">
+        <label class="col-sm-12 control-label">
           How many {{unitsCaptions.used}} are there in a {{unitsCaptions.ordered}}?
           <i class="fa fa-question-circle pull-right btn-link unit-size-popover" data-toggle="popover"
              data-placement="top" data-trigger="focus" tabindex="0" role="button"></i>
         </label>
 
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           {{#if canEditStock}}
             <input type="text" name="unitSize" class="form-control" placeholder="Unit Size"
                    value="{{ingredient.unitSize}}">
@@ -137,7 +137,7 @@
 
       <button type="submit" class="hide submit-form-button">save</button>
     </form>
-    <div class="row">
+    <div class="pull-right">
       {{#if ingredient}} <!-- is edit mode -->
         <button type="button" class="btn btn-primary submit-ingredient-button">Save changes</button>
         {{#if isArchive}}
@@ -149,7 +149,7 @@
       {{else}} <!-- create mode -->
         <button class="btn btn-primary submit-ingredient-button">Add ingredient</button>
       {{/if}}
-      <button type="button" class="btn btn-default close-modal-button">Close</button>
+      <button type="button" class="btn btn-default cancel-button">Cancel</button>
     </div>
   </div>
 </template>
