--- a/client/views/app/navigations/navigation/menu-entry/menu-entry.html
+++ b/client/views/app/navigations/navigation/menu-entry/menu-entry.html
@@ -5,7 +5,7 @@
         {{#if icon}}
           <i class="fa {{icon}}"></i>
         {{/if}}
-        <span class="nav-label"> {{title}}</span>
+        <span class="nav-label"> {{{title}}}</span>
       </a>
       {{#if subMenuItems}}
         <ul class="nav nav-second-level slider slider-for-{{subMenuItemsCount}}-menu-item">
