--- a/client/views/app/reports/stock-report/stock-report.html
+++ b/client/views/app/reports/stock-report/stock-report.html
@@ -1,3 +1,36 @@
 <template name="stockReport">
-  stockReport
+  {{> pageHeading title="Stock Reports" category="Stock" name="stocktake"}}
+
+  <div class="col-lg-12">
+    <div class="ibox ">
+      <div class="ibox-content">
+        <div class="table-responsive">
+          <table class="table table-condensed table-hover table-striped">
+            <thead>
+            {{#if stocktakes}}
+              <tr>
+                {{#each stocktakes}}
+                  <th>Stocktake Total {{dateFormat this.date}}</th>
+                {{/each}}
+              </tr>
+            {{else}}
+              No history
+            {{/if}}
+            </thead>
+            {{#if stocktakes}}
+              <tbody>
+              <tr>
+                {{#each stocktakes}}
+                  <td>${{roundCount this.totalStockValue}}</td>
+                {{/each}}
+              </tr>
+              </tbody>
+            {{else}}
+              No history
+            {{/if}}
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 </template>
