Little changes in templates

--- a/client/views/app/menu-items/submit/job-list/add-job-item/add-job-item.html
+++ b/client/views/app/menu-items/submit/job-list/add-job-item/add-job-item.html
@@ -19,7 +19,7 @@
         </thead>
         <tbody>
         {{#each availableJobItems}}
-          {{> jobItemsModalListItem item=this onJobItemSelect=onJobItemSelect}}
+          {{> jobListItem item=this onJobItemSelect=onJobItemSelect}}
         {{/each}}
         </tbody>
       </table>
