--- a/client/views/app/menu-items/submit/job-list/add-job-item/item/item.html
+++ b/client/views/app/menu-items/submit/job-list/add-job-item/item/item.html
@@ -1,4 +1,4 @@
-<template name="jobItemsModalListItem">
+<template name="jobListItem">
   <tr>
     <td>
       <div class="i-checks selected-prep">
