small code fixes

--- a/client/views/app/reports/menu-items-rank-report/menu-list-rank-report.html
+++ b/client/views/app/reports/menu-items-rank-report/menu-list-rank-report.html
@@ -1,5 +1,5 @@
 <template name="menuListRankReport">
-  {{> pageHeading title="Menu Items Report" category='Menus' name="menuList"}}
+  {{> pageHeading title="Menu Rank Report" category='Menus' name="menuList"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
