--- a/client/views/app/menu-items/submit/job-list/list-item/list-item.html
+++ b/client/views/app/menu-items/submit/job-list/list-item/list-item.html
@@ -4,7 +4,9 @@
     <td>${{jobItemStatistics.prepCostPerPortion}}</td>
     <td><input type="number" name="job-quantity" class="job-quantity" value="{{quantity}}" min="1"/></td>
     <td>
-      <i class="fa fa-trash remove-job-item"></i>
+      <a href="">
+        <i class="fa fa-trash remove-job-item"></i>
+      </a>
     </td>
   </tr>
 </template>
