--- a/client/views/app/stock/modal-list/stocks-list.html
+++ b/client/views/app/stock/modal-list/stocks-list.html
@@ -16,7 +16,7 @@
           <th>Name</th>
           <th>Supplier</th>
           <th>Unit used</th>
-          <th>How much does each unit cost?</th>
+          <th>Unit cost</th>
         </tr>
         </thead>
         <tbody>
