add weekly ranks property to checker to avoid 'match failed' error, event to autosave instructions

--- a/client/views/app/menu-items/details/instructions/instructions.html
+++ b/client/views/app/menu-items/details/instructions/instructions.html
@@ -11,7 +11,7 @@
       {{/if}}
     </div>
     {{#if canEditMenu}}
-      <div class="panel-footer edit-save-button">
+      <div class="panel-footer edit-close-button">
         Click here to {{#if state$isEditMode}} save {{else}} edit {{/if}}
       </div>
     {{/if}}
