Fixed display issue in weekly figures

--- a/client/views/app/roster/weekly-figures/roster-table/staff-cost/staff-cost.html
+++ b/client/views/app/roster/weekly-figures/roster-table/staff-cost/staff-cost.html
@@ -1,4 +1,4 @@
 <template name="staffCostTr">
-  <td>${{formatActual}}</td>
-  <td class="{{textClass}}">${{formatForecast}}</td>
+  <td>${{formatForecast}}</td>
+  <td class="{{textClass}}">${{formatActual}}</td>
 </template>
