fixed close flyout button styles
fixed unavailabilities list

--- a/client/views/app/common/flyouts/close-flyout-button/close-flyout-button.html
+++ b/client/views/app/common/flyouts/close-flyout-button/close-flyout-button.html
@@ -1,5 +1,5 @@
 <template name="CloseFlyoutButton">
-  <button class="close-flyout-button">
+  <button class="close-flyout-button close-icon">
     {{#if isTopBackFlyout}}
       <i class="fa fa-close"></i>
     {{else}}
