Fixed behavior of item selection in stocks list

--- a/client/views/app/stock/modal-list/stocks-list.html
+++ b/client/views/app/stock/modal-list/stocks-list.html
@@ -21,7 +21,7 @@
         </thead>
         <tbody>
         {{#each ingredients}}
-          {{> stockModalItem stock=this onAddStockItem=onAddStockItem}}
+          {{> stocksListItem stock=this onAddStockItem=onAddStockItem}}
         {{/each}}
         </tbody>
       </table>
