--- a/client/views/app/menu-items/details/instructions/instructions.html
+++ b/client/views/app/menu-items/details/instructions/instructions.html
@@ -12,7 +12,16 @@
     </div>
     {{#if canEditMenu}}
       <div class="panel-footer edit-close-button">
-        Click here to {{#if state$isEditMode}} save {{else}} edit {{/if}}
+        <div class="row">
+          <span class="col-md-5 col-lg-5">
+            Click here to {{#if state$isEditMode}} close {{else}} edit {{/if}}
+          </span>
+          {{#if instruction.typing}}
+            <span class="col-md-2 col-lg-2">
+              {{#if instruction.saved}} Saved {{else}} Saving... {{/if}}
+            </span>
+          {{/if}}
+        </div>
       </div>
     {{/if}}
   </div>
