More compact table header size

--- a/client/views/app/reports/stock-report/stock-report.html
+++ b/client/views/app/reports/stock-report/stock-report.html
@@ -11,10 +11,10 @@
                   <thead>
                   <tr>
                     <th>{{firstStocktake.date}}</th>
-                    <th>Total $ of orders received</th>
+                    <th title="Total $ of orders received">Orders</th>
                     <th>{{secondStocktake.date}}</th>
-                    <th colspan="2">Expected Cost of Goods</th>
-                    <th colspan="2">Actual Cost of Goods</th>
+                    <th colspan="2">Expected <abbr title="Cost of Goods">COG</abbr></th>
+                    <th colspan="2">Actual <abbr title="Cost of Goods">COG</abbr></th>
                     <th colspan="2">Difference</th>
                   </tr>
                   </thead>
