--- a/client/views/app/job-items/list-view/job-items-list/job-items-list.html
+++ b/client/views/app/job-items/list-view/job-items-list/job-items-list.html
@@ -1,12 +1,12 @@
 <template name="jobItemsList">
-  <div class="row">
-    <div class="col-sm-12">
-      <input type="text" class="form-control col-sm-8 search-job-items-box"
-             placeholder="Search...">
+
+  <div class="panel-body no-top-border">
+    <div class="row m-t-sm m-b-sm">
+      <div class="col-sm-12">
+        <input type="text" class="form-control col-sm-8 search-job-items-box"
+               placeholder="Search...">
+      </div>
     </div>
-  </div>
-  <hr>
-  <div class="ibox float-e-margins">
     <div class="table-responsive">
       <table class="table">
         <thead>
