Added opportunity to create new job in addJobItem template

--- a/client/views/app/menu-items/submit/job-list/add-job-item/add-job-item.html
+++ b/client/views/app/menu-items/submit/job-list/add-job-item/add-job-item.html
@@ -24,5 +24,9 @@
         </tbody>
       </table>
     </form>
+    <div class="alert alert-warning">If your job item is not in the list,
+      <a class="alert-link add-new-job">click here</a> to add it. Once you save it, it will appear next
+      time you search.
+    </div>
   </div>
 </template>
