Created flyout template for create new job

--- a/client/views/app/menu-items/submit/job-list/add-job-item/new-job-item/new-job-item.html
+++ b/client/views/app/menu-items/submit/job-list/add-job-item/new-job-item/new-job-item.html
@@ -6,6 +6,6 @@
     </div>
   </div>
   <div class="flyout-content">
-    {{> submitEditJobItem getData}}
+    {{> submitEditJobItem getSettings}}
   </div>
 </template>
