Little fixes of slyles and layouts

--- a/client/stylesheets/components/flyout.less
+++ b/client/stylesheets/components/flyout.less
@@ -35,6 +35,7 @@
     }
 
     .flyout-content {
+      margin-top: @padding;
       padding: @padding;
       position: absolute;
       top: 50px;
