--- a/client/views/app/menu-items/submit/submit-menu-item.html
+++ b/client/views/app/menu-items/submit/submit-menu-item.html
@@ -57,7 +57,9 @@
 
               <div class="form-group">
                 <label class="col-sm-2 control-label">Ingredients used</label>
-                {{> listOfIngredients ingredients=state$menuItemIngredients onChange=getOnIngredientsListChanged}}
+                <div class="col-sm-10">
+                  {{> listOfIngredients ingredients=state$menuItemIngredients onChange=getOnIngredientsListChanged}}
+                </div>
               </div>
 
               <div class="form-group">
