Fixed style of submitEditJobItem when it places in flyout

--- a/client/views/app/job-items/job-item-submit-edit/job-items-sumbmit-edit.less
+++ b/client/views/app/job-items/job-item-submit-edit/job-items-sumbmit-edit.less
@@ -2,4 +2,13 @@
   label {
     text-align: left !important;
   }
+  .input-group .form-control,
+  .btn-group > .btn.active {
+    //bug, button  pops up above of highest template
+    z-index: 0;
+  }
+  .ing-qty {
+    max-width: 40px;
+  }
+
 }
